// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TranslateVisitor $translate emits an error if any translation id in the passed in array is not a literal 1`] = `
Array [
  Array [
    [Error: Illegal argument for call to $translate: The array with the translation ids should only contain literals. If you have registered the translation manually, you can use a /* suppress-dynamic-translation-error: true */ comment in the block of the function call to suppress this error. (test.js:1:0)],
  ],
]
`;

exports[`TranslateVisitor $translate emits an error if the default text is not a literal 1`] = `
Array [
  Array [
    [Error: Illegal argument for call to $translate: The default text should be a string literal. If you have registered the translation manually, you can use a /* suppress-dynamic-translation-error: true */ comment in the block of the function call to suppress this error. (test.js:1:1)],
  ],
]
`;

exports[`TranslateVisitor $translate emits an error if the function is called without any arguments 1`] = `
Array [
  Array [
    [Error: Illegal argument for call to $translate: A call to $translate requires at least one argument that is the translation id. If you have registered the translation manually, you can use a /* suppress-dynamic-translation-error: true */ comment in the block of the function call to suppress this error. (test.js:1:1)],
  ],
]
`;

exports[`TranslateVisitor $translate emits an error if the translation id is not an array expression and neither a literal 1`] = `
Array [
  Array [
    [Error: Illegal argument for call to $translate: The translation id should either be a string literal or an array containing string literals. If you have registered the translation manually, you can use a /* suppress-dynamic-translation-error: true */ comment in the block of the function call to suppress this error. (test.js:1:1)],
  ],
]
`;

exports[`TranslateVisitor i18n.registerTranslation emits an error if called without arguments 1`] = `
Array [
  Array [
    [Error: Illegal argument for call to 'i18n.registerTranslation'. The call requires at least the 'translationId' argument that needs to be a literal (test.js:1:1)],
  ],
]
`;

exports[`TranslateVisitor i18n.registerTranslation emits an error if the default text is not a literal 1`] = `
Array [
  Array [
    [Error: Illegal argument for call to i18n.registerTranslation: the default text has to be a literal (test.js:1:1)],
  ],
]
`;

exports[`TranslateVisitor i18n.registerTranslation emits an error if the translation is not a literal 1`] = `
Array [
  Array [
    [Error: Illegal argument for call to 'i18n.registerTranslation'. The call requires at least the 'translationId' argument that needs to be a literal (test.js:1:1)],
  ],
]
`;
